--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -91,11 +91,12 @@ jobs:
       # Next step: run pylint. Anything less than 10/10 will fail.
       - name: Lint with pylint
         run: |
-          pylint smogonapi
+          pylint smogonapi/smogonapi
 
       # Next step: run the unit tests with code coverage.
       - name: Unit tests
         run: |
+          cd smogonapi
           coverage run -m unittest discover
           coverage report
           coverage lcov
@@ -105,7 +106,8 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: coverage.lcov
+          base-path: smogonapi
+          path-to-lcov: smogonapi/coverage.lcov
           # The following two options are needed for "parallel"
           # runs - ie if you have a matrix of python versions.
           # This holds off on reporting code coverage to
